--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,58 +2,68 @@
   --clr-white: #fff;
   --clr-black: #000;
 }
-*, ::*::after, *::before {
+
+*,
+::*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 html {
   font-size: 62.5%;
 }
+
 body {
   background: #fff;
 }
+
 ul {
   list-style: none;
 }
+
 a {
   text-decoration: none;
   cursor: pointer;
 }
+
 p,
 span {
   letter-spacing: 0.1rem;
 }
+
 img {
-  width: 50%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
 }
-.Header-main {
+
+.header-main {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.Header a {
+.header a {
   text-decoration: none;
   color: #15302c;
 }
 
-.Main {
+.main {
   padding: 10px;
   grid-template-columns: minmax(auto, 976px);
   display: grid;
   justify-content: center;
 }
 
-.Characters {
+.character {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1.5rem;
-  grid-row-gap: 1.5em;
+  grid-row-gap: 3.5em;
   display: grid;
 }
 
@@ -79,6 +89,7 @@ img {
   width: 100%;
   height: auto;
   border-radius: 5px 5px 0 0;
+  border-radius: 10px;
 }
 
 .Characters-card h2 {
@@ -103,15 +114,16 @@ img {
   display: block;
   animation-duration: 2s;
   animation-name: fade;
+  margin-bottom: 2rem;
 }
 
-.Characters-item img {
+.characters-item img {
   width: 100%;
   height: auto;
   border-radius: 5px 5px 0 0;
 }
 
-.Characters-item h2 {
+.characters-item h2 {
   font-size: 18px;
   font-weight: 300;
   padding: 5px 10px;
@@ -119,7 +131,7 @@ img {
   justify-content: space-between;
 }
 
-.Characters-item a {
+.characters-item a {
   text-decoration: none;
   color: #026c86;
 }
@@ -128,6 +140,7 @@ img {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -146,6 +159,7 @@ img {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
